[tool.poetry]
name = "async_client"
version = "0.1.0"
description = ""
authors = ["Christopher Costello <christophercostello97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiolimiter = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
pylint = "^2.13.9"
black = "^22.3.0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
flake8-docstrings = "^1.6.0"
pytest = "^7.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
